finalizando footer e estilização da page

--- a/Index.html
+++ b/Index.html
@@ -123,7 +123,7 @@
         </div>
         
         <div class="linha2">
-            <a href="">Termos de Uso</a> |
+            <a href="">Termos de Uso</a>
             <a href="">Política de Privacidade</a>
         </div>
     </footer>
